# wandb-model-observer

./: .gitignore  README.md  pyproject.toml
tests/: test_observer.py
wandb/: latest-run
wandb/run-20230228_225250-ovi2drd6/: run-ovi2drd6.wandb
wandb/run-20230228_225250-ovi2drd6/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20230228_230000-5id3m0a3/: run-5id3m0a3.wandb
wandb/run-20230228_230000-5id3m0a3/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20230228_230024-6p9oy9ox/: run-6p9oy9ox.wandb
wandb/run-20230228_230024-6p9oy9ox/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20230228_230313-yxvlcszq/: run-yxvlcszq.wandb
wandb/run-20230228_230313-yxvlcszq/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20230228_230444-aocwaj3g/: run-aocwaj3g.wandb
wandb/run-20230228_230444-aocwaj3g/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20230228_230518-9zgjb8n1/: run-9zgjb8n1.wandb
wandb/run-20230228_230518-9zgjb8n1/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20230228_230755-7ycvx99m/: run-7ycvx99m.wandb
wandb/run-20230228_230755-7ycvx99m/files/: config.yaml  (+2 more)
wandb/run-20230228_230945-ss1chnm3/: run-ss1chnm3.wandb
wandb/run-20230228_231402-goamejh1/: run-goamejh1.wandb
wandb/run-20230228_231649-kup422eo/: run-kup422eo.wandb
wandb/run-20230228_232057-2wifwfvd/: run-2wifwfvd.wandb
wandb/run-20230228_232244-iirwuxor/: run-iirwuxor.wandb
wandb_model_observer/: __init__.py  observer.py
(+15 files in other folders)
