[tool.poetry]
name = "wandb-model-observer"
version = "0.1.0"
description = ""
authors = ["yuta0306 <you-2001-3-6@ezweb.ne.jp>"]
readme = "README.md"
packages = [{include = "wandb_model_observer"}]

[tool.poetry.dependencies]
python = "^3.9"
wandb = "^0.13.10"
torch = "^1.13.1"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
